# CryptoTradingAgents

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README-CN.md  README.md  app.py  docker-compose.yml  docker-entrypoint.sh  nginx.conf  pyproject.toml  pyrightconfig.json  requirements.txt  test_btc_run.py
.streamlit/: config.toml  secrets.toml.template
cli/: .env.example  investment_preferences  main.py  run.py  utils.py
mailsender/: __init__.py  send.py
tradingagents/: default_config.py
tradingagents/agents/: __init__.py
tradingagents/agents/analysts/: fundamentals_analyst.py  market_analyst.py  news_analyst.py  social_media_analyst.py
tradingagents/agents/managers/: research_manager.py  risk_manager.py
tradingagents/agents/researchers/: bear_researcher.py  bull_researcher.py
tradingagents/agents/risk_mgmt/: aggresive_debator.py  conservative_debator.py  neutral_debator.py
tradingagents/agents/trader/: trader.py
tradingagents/agents/utils/: agent_states.py  agent_utils.py  memory.py
tradingagents/dataflows/: __init__.py  alternativeme_utils.py  binance_utils.py  blockbeats_utils.py  coindesk_utils.py  coingecko_utils.py  coinstats_utils.py  config.py  finnhub_utils.py  googlenews_utils.py  interface.py  reddit_utils.py  stockstats_utils.py  taapi_utils.py  utils.py  yfin_utils.py
tradingagents/graph/: __init__.py  conditional_logic.py  propagation.py  reflection.py  setup.py  signal_processing.py  trading_graph.py
tradingagents/i18n/: __init__.py
tradingagents/i18n/interface/: __init__.py  en.py  zh.py
tradingagents/i18n/prompts/: __init__.py  en.py  zh.py
