[project]
name = "tradingagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.16.98",
    "backtrader>=1.9.78.123",
    "binance-futures-connector>=4.2.0",
    "chromadb>=1.0.12",
    "eodhd>=1.0.32",
    "feedparser>=6.0.11",
    "finnhub-python>=2.4.23",
    "langchain-anthropic>=0.3.15",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.5",
    "langchain-openai>=0.3.23",
    "langgraph>=0.4.8,<1.0.0",
    "loguru>=0.7.0",
    "markdown-pdf>=1.13.0",
    "pandas>=2.3.0",
    "parsel>=1.10.0",
    "praw>=7.8.1",
    "pytz>=2025.2",
    "questionary>=2.1.0",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "setuptools>=80.9.0",
    "stockstats>=0.6.5",
    "streamlit>=1.58.0",
    "tqdm>=4.67.1",
    "tushare>=1.4.21",
    "typing-extensions>=4.14.0",
    "yfinance>=0.2.63",
    "onnxruntime>=1.22.0,<1.24.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.0",
    "debugpy>=1.8.0",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W", "I", "UP", "N", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tradingagents/dataflows/yfin_utils.py" = ["N805"]
"tradingagents/i18n/**" = ["RUF001"]
"cli/utils.py" = ["N806"]
"cli/run.py" = ["E402", "F541"]
"cli/main.py" = ["E402", "F841"]
"app.py" = ["E402", "RUF001", "RUF003"]
"test_btc_run.py" = ["E402"]
"tradingagents/agents/utils/agent_utils.py" = ["N803"]
"tradingagents/dataflows/interface.py" = ["F403", "F405", "E402", "N802"]
"tradingagents/dataflows/googlenews_utils.py" = ["N802"]
"tradingagents/dataflows/finnhub_utils.py" = ["SIM115"]
"tradingagents/dataflows/taapi_utils.py" = ["E731", "RUF012"]
"tradingagents/dataflows/utils.py" = ["RUF012"]
"tradingagents/graph/trading_graph.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
